# gpu-pairwise-jaccard

./: LICENSE  README.md  setup.cfg
gpu_pairwise/: __init__.py  boolean.py  compiler.py  dtype.py  geometric.py  metric.py  util.py
tests/: test_boolean.py  test_geometric.py
