[metadata]
# replace with your username:
name = gpu-pairwise
version = 0.0.3
author = Steve Stagg
author_email = stestagg@gmail.com
description = GPU implementation of various pairwise distance functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stestagg/gpu-pairwise-jaccard
project_urls =
    Bug Tracker = https://github.com/stestagg/gpu-pairwise-jaccard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = gpu_pairwise
python_requires = >=3.6
install_requires =
  numba
  numpy
